desactivation des boutons uodate et delete quand on modifie

--- a/style.css
+++ b/style.css
@@ -105,3 +105,8 @@ button.delete:hover {
 
 
 }
+button.disable {
+    background: rgb(94, 92, 92);  
+    color: black;        
+    cursor: not-allowed;
+}
